Mon Apr  6 16:09:58 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_args.c: protect value stack from calling other methods
	  during complex parameter setting process (splat, kw, and so on).
	  [Bug #11027]

	* vm_core.h: remove rb_thead_t::mark_stack_len.
	  With this modification, we don't need to use th->mark_stack_len.

	* test/ruby/test_keyword.rb: add a test.

	* cont.c (cont_capture): catch up this fix.

	* vm.c (rb_thread_mark): ditto.

Mon Apr  6 11:26:42 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/downloader.rb (http_options): prevent content auto decoding
	  because this is a downloader.

Sun Apr  5 09:55:18 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* doc/contributing.rdoc: update Maintainers list.

Sun Apr  5 09:11:00 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/rbinstall.rb: fix bin script permission of bundled gems.

Sun Apr  5 08:46:08 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/rbinstall.rb: support --program-suffix option.

Sat Apr  4 21:31:18 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rake/*: Gemify rake [fix GH-862][Feature #11025]
	* test/rake/*: ditto.
	* tool/rbinstall.rb: ditto.

Sat Apr  4 11:30:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_setbyte): check the argument first not to
	  discard shared string and code range unnecessarily until
	  actually changing the contents.  pointed out by headius.

Sat Apr  4 08:16:43 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (edit_path): use path which is absolute ftp url
	  on using ftp_proxy.

Fri Apr  3 11:43:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call0_cfunc): update invoker arguments.

	* vm_insnhelper.c (vm_call_cfunc_latter): ditto.

	* vm_insnhelper.c (rb_vm_call_cfunc_push_frame): ditto, and prefix
	  with rb_.

Thu Apr  2 16:26:59 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk, tool/mkconfig.rb: check the running ruby version in